Show entire SVG on Firefox. Fix #1.

--- a/clustergraph.css
+++ b/clustergraph.css
@@ -65,6 +65,11 @@ p {
 	height: 100%;
 }
 
+.vis {
+	width: 100%;
+	height: 100%;
+}
+
 h1, :link, input, button, #legend, .fb-like, #right, #about {
 	position: relative;
 	z-index: 2;
